--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.0.8",
+    "@prisma/client": "^5.14.0",
     "@types/node": "20.12.11",
     "@types/react": "18.3.2",
     "@types/react-dom": "18.3.0",
@@ -22,5 +23,8 @@
     "react-dom": "18.3.1",
     "tailwindcss": "3.4.3",
     "typescript": "5.4.5"
+  },
+  "devDependencies": {
+    "prisma": "^5.14.0"
   }
 }
