--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
     "next": "13.5.4",
+    "openai": "^4.47.2",
     "postcss": "8.4.38",
     "react": "18.3.1",
+    "react-autosave": "^0.4.4",
     "react-dom": "18.3.1",
     "tailwindcss": "3.4.3",
     "typescript": "5.4.5"
