--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
+    "langchain": "^0.2.5",
     "next": "13.5.4",
     "openai": "^4.47.2",
     "postcss": "8.4.38",
