--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.3.1",
     "react-autosave": "^0.4.4",
     "react-dom": "18.3.1",
+    "recharts": "^2.12.7",
     "tailwindcss": "3.4.3",
     "typescript": "5.4.5"
   },
