import testing libraries

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest"
   },
   "dependencies": {
     "@clerk/nextjs": "^5.0.8",
@@ -29,6 +30,11 @@
     "typescript": "5.4.5"
   },
   "devDependencies": {
-    "prisma": "^5.14.0"
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
+    "@vitejs/plugin-react-swc": "^3.7.0",
+    "jsdom": "^24.1.0",
+    "prisma": "^5.14.0",
+    "vitest": "^1.6.0"
   }
 }
